--- a/projects/VS2019/examples/shapes_top_down_lights.vcxproj
+++ b/projects/VS2019/examples/shapes_top_down_lights.vcxproj
@@ -37,9 +37,9 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{67A9CF3B-A5E8-442E-A437-ED74A08CA312}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>top_down_lights</RootNamespace>
+    <RootNamespace>shapes_top_down_lights</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>top_down_lights</ProjectName>
+    <ProjectName>shapes_top_down_lights</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -374,7 +374,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\examples\effects\top_down_lights.c" />
+    <ClCompile Include="..\..\..\examples\shapes\shapes_top_down_lights.c" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\raylib\raylib.vcxproj">
