--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,8 +16,13 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: read
+
 jobs:
   build:
+    permissions:
+      contents: write  # for actions/upload-release-asset to upload release asset
     runs-on: windows-latest
     strategy:
       fail-fast: false
