--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -15,8 +15,13 @@ on:
   release:
     types: [published]
 
+permissions:
+  contents: read
+
 jobs:
   build:
+    permissions:
+      contents: write  # for actions/upload-release-asset to upload release asset
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
