--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -72,7 +72,7 @@ jobs:
         cp -v ./src/raylib.h ./build/${{ env.RELEASE_NAME }}/include
         cp -v ./src/raymath.h ./build/${{ env.RELEASE_NAME }}/include
         cp -v ./src/rlgl.h ./build/${{ env.RELEASE_NAME }}/include
-        cp -v ./src/extras/raygui.h ./build/${{ env.RELEASE_NAME }}/include
+        cp -v ./CHANGELOG ./build/${{ env.RELEASE_NAME }}/CHANGELOG
         cp -v ./README.md ./build/${{ env.RELEASE_NAME }}/README.md
         cp -v ./LICENSE ./build/${{ env.RELEASE_NAME }}/LICENSE
         cd build
