--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('Ray Lib', 'c', defualt_options: 'c_std=c11')
+project('Ray Lib', 'c', default_options: 'c_std=c11')
 
 glfw_dep = dependency('glfw')
 
