--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -61,8 +61,8 @@ jobs:
         make PLATFORM=PLATFORM_DESKTOP RAYLIB_LIBTYPE=SHARED RAYLIB_LIB_NAME=raylib_x86_64 CUSTOM_CFLAGS="-target x86_64-apple-macos10.12 -DGL_SILENCE_DEPRECATION" CUSTOM_LDFLAGS="-target x86_64-apple-macos10.12" -B
         make PLATFORM=PLATFORM_DESKTOP RAYLIB_LIBTYPE=SHARED RAYLIB_LIB_NAME=raylib_arm64 CUSTOM_CFLAGS="-target arm64-apple-macos11 -DGL_SILENCE_DEPRECATION" CUSTOM_LDFLAGS="-target arm64-apple-macos11" -B
         lipo -create -output ../build/${{ env.RELEASE_NAME }}/lib/libraylib.4.0.0.dylib libraylib_x86_64.4.0.0.dylib libraylib_arm64.4.0.0.dylib
-        cp -v ./libraylib_arm64.dylib ../build/${{ env.RELEASE_NAME }}/lib/libraylib.dylib
-        cp -v ./libraylib_arm64.400.dylib ../build/${{ env.RELEASE_NAME }}/lib/libraylib.400.dylib
+        ln -sv ../build/${{ env.RELEASE_NAME }}/lib/libraylib.4.0.0.dylib  ../build/${{ env.RELEASE_NAME }}/lib/libraylib.dylib
+        ln -sv ../build/${{ env.RELEASE_NAME }}/lib/libraylib.4.0.0.dylib  ../build/${{ env.RELEASE_NAME }}/lib/libraylib.400.dylib
         cd ..
   
     - name: Generate Artifacts
